Bug 456183 - cursor stuck as a hand
Summary: cursor stuck as a hand
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Move (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 460073 472060 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-06-30 18:58 UTC by til.schmitter
Modified: 2023-07-08 04:14 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description til.schmitter 2022-06-30 18:58:39 UTC
SUMMARY
the cursor is stuck as a hand after simultaneous touch/spacebar input

STEPS TO REPRODUCE
(0.  set up one finger drag to pan) ((might work with other touch gestures that pasn too))
1. press space bar and touch to pan at the same time in any order

OBSERVED RESULT
while i draw i always have the open hand cursor
- restarting krita helps
- opening a new window while the old one is still open doesn't help

SOFTWARE/OS VERSIONS
Version: 5.2.0-prealpha (git 48bf920)
Windows 10
Comment 1 wolthera 2023-01-30 20:52:08 UTC
*** Bug 460073 has been marked as a duplicate of this bug. ***
Comment 2 wolthera 2023-01-30 20:53:10 UTC
I can confirm.
Comment 3 sh_zam 2023-03-18 00:22:49 UTC
Git commit af31ce85801cff6b88c8670246185f7c29cc6e58 by Sharaf Zaman.
Committed on 18/03/2023 at 00:22.
Pushed by szaman into branch 'master'.

Touch System: Cursor stuck as hand

This happened when the Touch Drag was mapped to Pan Canvas, and user
pressed the shortcut for Canvas Pan action. The reason for this is,
first the keyboard shortcut would activate the KisPanAction, and then
the Touch Shortcut would activate the action again, without deactivating
it first. The reason it is necessary is because setOverrideCursor in
KisPanAction maintains an internal stack for overridden cursor, so if we
call setOverrideCursor() twice, we have to restoreCursor() *twice*.

M  +10   -2    libs/ui/input/kis_shortcut_matcher.cpp

https://invent.kde.org/graphics/krita/commit/af31ce85801cff6b88c8670246185f7c29cc6e58
Comment 4 sh_zam 2023-07-08 04:14:16 UTC
*** Bug 472060 has been marked as a duplicate of this bug. ***